--- a/topics/_cmsc408-overview.html
+++ b/topics/_cmsc408-overview.html
@@ -51,15 +51,9 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="im-glad-youre-here" class="level2">
 <h2 class="anchored" data-anchor-id="im-glad-youre-here">I’m glad you’re here!!!!</h2>
+<p>&nbsp;</p>
 <div class="columns">
 <div class="column">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="assets/L01-rise-of-sql.png" class="img-fluid figure-img"></p>
-<figcaption><a href="https://spectrum.ieee.org/the-rise-of-sql" class="uri">https://spectrum.ieee.org/the-rise-of-sql</a></figcaption>
-</figure>
-</div>
-</div><div class="column">
 <section id="cmsc-508---database-theory" class="level3">
 <h3 class="anchored" data-anchor-id="cmsc-508---database-theory">CMSC 508 - Database Theory</h3>
 <ul>
@@ -70,6 +64,13 @@ ul.task-list li input[type="checkbox"] {
 <p>Design and implementation of relational database systems. Emphasis is placed on entity-relationship diagrams, relational algebra, normal forms and normalization. Introduction to SQL. Discussion of physical level issues.</p>
 <p>Students will be required to complete a design project and give an oral presentation of the project.</p>
 </section>
+</div><div class="column">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="assets/L01-rise-of-sql.png" class="img-fluid figure-img"></p>
+<figcaption><a href="https://spectrum.ieee.org/the-rise-of-sql" class="uri">https://spectrum.ieee.org/the-rise-of-sql</a></figcaption>
+</figure>
+</div>
 </div>
 </div>
 </section>
@@ -140,8 +141,8 @@ Do I need really need a text book?
 <p>SLO7 - <em>Acquire and apply new knowledge as needed, using appropriate learning strategies.</em></p>
 </div>
 </section>
-<section id="cmsc-408-learning-outcomes" class="level2">
-<h2 class="anchored" data-anchor-id="cmsc-408-learning-outcomes">CMSC 408 Learning Outcomes</h2>
+<section id="cmsc-408---learning-outcomes" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---learning-outcomes">CMSC 408 - Learning Outcomes</h2>
 <div style="font-size:90%;">
 <ol type="1">
 <li><p>Demonstrate an understanding of the concepts underlying database design. <em>(ABET SLO 1, SLO 7)</em></p></li>
@@ -162,7 +163,7 @@ Do I need really need a text book?
 <div class="columns">
 <div class="column" style="width:35%;">
 <section id="tool-sets-well-be-using" class="level3">
-<h3 class="anchored" data-anchor-id="tool-sets-well-be-using">Tool sets we’ll be using</h3>
+<h3 class="anchored" data-anchor-id="tool-sets-well-be-using">Tool sets we’ll be using …</h3>
 <div class="more-separation">
 <ul>
 <li><p>SQL, MySQL, and SQLITE</p></li>
@@ -175,10 +176,10 @@ Do I need really need a text book?
 </div>
 </section>
 </div><div class="column" style="width:65%;">
-<section id="expectations" class="level3">
-<h3 class="anchored" data-anchor-id="expectations">Expectations</h3>
-<p>This is a programming class. You will learn and improve through practice and reptition.</p>
-<p>There will be LOTS of opportunity to practice.</p>
+<section id="what-you-should-expect" class="level3">
+<h3 class="anchored" data-anchor-id="what-you-should-expect">What you should expect …</h3>
+<p>This is a programming class. Be prepared for TONS of coding.</p>
+<p>We’ll be learning and improving through practice and repitition. There will be LOTS of opportunity to practice.</p>
 <p>We’ll be learning to “program/code” documentation and graphics using Quarto.</p>
 <p>We’ll be learning how to communicate designs using ER diagrams and crows-feet diagrams.</p>
 <p>We’ll be learning to create, retrieve, update and delete database objects using SQL.</p>
@@ -187,9 +188,14 @@ Do I need really need a text book?
 </div>
 </div>
 </section>
-<section id="topics-over-time" class="level2">
-<h2 class="anchored" data-anchor-id="topics-over-time">Topics over time</h2>
-<p>The class organized in modules. The GANNT chart below highlights the topics and their order. Homework assignments reinforce topics discussed in class. Quizzes test understanding of the topics where appropriate. Material is presented in a way that complements the successful completion of the semester-long project.</p>
+<section id="cmsc-408---topics-over-time" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---topics-over-time">CMSC 408 - Topics over time</h2>
+<p>The class organized in modules. The GANNT chart below highlights the topics and their order.</p>
+<ul>
+<li>Homework assignments reinforce topics discussed in class.</li>
+<li>Quizzes test understanding of the topics where appropriate.</li>
+<li>Lectures, homeworks and quizzes are organized in a way that complements the successful completion of the semester-long project.</li>
+</ul>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
@@ -212,11 +218,12 @@ Do I need really need a text book?
 </div>
 </div>
 </section>
-<section id="assessment-and-grading" class="level2">
-<h2 class="anchored" data-anchor-id="assessment-and-grading">Assessment and Grading</h2>
+<section id="cmsc-408---assessment-and-grading" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading">CMSC 408 - Assessment and Grading</h2>
 <p>This will be a busy semester! There will be items due each week.</p>
 <section id="there-will-be-a-mix-of-activities" class="level3">
 <h3 class="anchored" data-anchor-id="there-will-be-a-mix-of-activities">There will be a mix of activities</h3>
+<p>&nbsp;</p>
 <div style="font-size:100%;">
 <center>
 <table class="table">
@@ -231,7 +238,7 @@ Do I need really need a text book?
 <tr class="odd">
 <td style="text-align: center;">Homework</td>
 <td style="text-align: center;">40%</td>
-<td style="text-align: left;">10 submissions done individually</td>
+<td style="text-align: left;">9 submissions done individually</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">Quizzes</td>
@@ -249,13 +256,13 @@ Do I need really need a text book?
 </div>
 </section>
 </section>
-<section id="assessment-and-grading-1" class="level2">
-<h2 class="anchored" data-anchor-id="assessment-and-grading-1">Assessment and Grading</h2>
+<section id="cmsc-408---assessment-and-grading-1" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading-1">CMSC 408 - Assessment and Grading</h2>
 <p>This will be a busy semester! There will be items due each week.</p>
 <section id="homework-assignments" class="level3">
 <h3 class="anchored" data-anchor-id="homework-assignments">Homework Assignments</h3>
 <div style="font-size:0.9em;">
-<p>Homework assignments are done individually. Homeworks will be distributed using GITHUB classroom; a link will be provided in the Canvas assignment page. Homeworks will be submitted to Gradescope. Each assignment is worth 20 points. Rubrics will be provided. Homeworks will be written using Quarto. Homework 2 provides an opportunity to learn more about Quarto. Quarto will also be used for the semester project.</p>
+<p>Homework assignments are done individually. Homeworks will be distributed using GITHUB classroom; a link will be provided in the Canvas assignment page. Homeworks will be submitted to Gradescope. Rubrics will be provided. <em>REVIEW EACH RUBRIC CAREFULLY!</em></p>
 </div>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
@@ -266,17 +273,17 @@ Do I need really need a text book?
     dateFormat M/DD/YYYY
     axisFormat %U
 
-    section Homework&lt;br/&gt;(40%)
+    section Homework&lt;br/&gt;(9 at 40%)
     (first day of class): milestone, fdc1, 1/7/2024, 0d
-    DE Tool review: milestone, h1, 1/20/2024, 0d
-    HW 2: milestone, h2, 1/29/2024, 0d
-    HW 3: milestone, h3, 2/10/2024, 0d
-    HW 4: milestone, h4, 3/2/2024, 0d
-    hw 5: milestone, h5, 3/16/2024, 0d
-    hw 6: milestone, h6, 3/30/2024, 0d
-    hw 7: milestone, h7, 4/6/2024, 0d
-    homework 8: milestone, h8, 4/28/2024, 0d
-    Course Evaluation: milestone, h10, 4/28/2024, 0d
+    HW1 - DE Tool review: milestone, h1, 1/20/2024, 0d
+    Homework 2: milestone, h2, 1/29/2024, 0d
+    Homework 3: milestone, h3, 2/10/2024, 0d
+    Homework 4: milestone, h4, 3/2/2024, 0d
+    Homework 5: milestone, h5, 3/16/2024, 0d
+    Homework 6: milestone, h6, 3/30/2024, 0d
+    Homework 7: milestone, h7, 4/6/2024, 0d
+    Homework 8: milestone, h8, 4/28/2024, 0d
+    HW9 - Course Evaluation: milestone, h10, 4/28/2024, 0d
     (last day of class): milestone, ldc2, 4/28/2024, 0d
 </pre>
 </div>
@@ -286,13 +293,31 @@ Do I need really need a text book?
 </div>
 </section>
 </section>
-<section id="assessment-and-grading-2" class="level2">
-<h2 class="anchored" data-anchor-id="assessment-and-grading-2">Assessment and Grading</h2>
+<section id="cmsc-408---assessment-and-grading-2" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading-2">CMSC 408 - Assessment and Grading</h2>
+<p>This will be a busy semester! There will be items due each week.</p>
+<section id="homework-assignment-policies" class="level3">
+<h3 class="anchored" data-anchor-id="homework-assignment-policies">Homework assignment policies</h3>
+<div class="smaller">
+<ul>
+<li><p>I observe <a href="https://eric.ed.gov/?id=EJ1367855">flexible deadlines</a> for homework, NOT FOR QUIZZES OR DELIVERABLES!</p></li>
+<li><p>Each homework has a <em>timeliness</em> score in the rubric. <em>On-time</em> gets full credit. The <em>timeliness score</em> is reduced slowly past the submission date.</p></li>
+<li><p>You will ALWAYS get credit for submitting assignments. ALWAYS turn something in! I want you to get the practice and LEARN!</p></li>
+<li><p>I realize this is NOT your only class. But don’t get too far behind!</p></li>
+<li><p>READ homework rubrics to see expectations for each assignment. The rubrics will help you understand what’s important and where you should spend your time.</p></li>
+<li><p>The homework assignments are generally aligned with the semester project, so that one reinforces the other. It pays to keep up!</p></li>
+</ul>
+</div>
+</section>
+</section>
+<section id="cmsc-408---assessment-and-grading-3" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading-3">CMSC 408 - Assessment and Grading</h2>
 <p>This will be a busy semester! There will be items due each week.</p>
 <section id="quizzes" class="level3">
 <h3 class="anchored" data-anchor-id="quizzes">Quizzes</h3>
 <div style="font-size:0.9em;">
-<p>There will be four quizzes throughout the semester. Each quiz will be worth 30 points. Quizzes will be administered on-line usint the Respondus lockdown browser. It is the responsibility of the student to ensure that the technology works. Homework assignment 1 offers practice to work out the bugs. Quizzes will be administered during class time.</p>
+<p>Quizzes will be administered on-line using the Respondus lockdown browser. It is the responsibility of the student to ensure that Respondus works. Quizzes will be adminstered outside of class. NO LATE QUIZZES.</p>
+<p>Practice quizzes will be available. You can take practice quiz as many times as you like. Practice quiz will look exactly like the actual quiz. Expect each quiz to take 30-minutes or less.</p>
 </div>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
@@ -305,11 +330,11 @@ Do I need really need a text book?
 
     section Quizzes&lt;br/&gt;(5 at 30%)
     (first day of class): milestone, fdc1, 1/7/2024, 0d
-    Pre-class survey: milestone, q0, 1/7/2024, 0d
-    ER Models: milestone, q1, 1/23/2024, 0d
-    Relational algebra: milestone, q2, 2/11/2024, 0d
-    Normal forms: milestone, q3, 2/27/2024, 0d
-    SQL basics: milestone, q4, 3/19/2024, 0d
+    Quiz 1 - Pre-class survey: milestone, q0, 1/7/2024, 0d
+    Quiz 2 - ER Models: milestone, q1, 1/23/2024, 0d
+    Quiz 3 - Relational algebra: milestone, q2, 2/11/2024, 0d
+    Quiz 4 - Normal forms: milestone, q3, 2/27/2024, 0d
+    Quiz 5 - SQL basics: milestone, q4, 3/19/2024, 0d
     (last day of class): milestone, ldc2, 4/28/2024, 0d
 </pre>
 </div>
@@ -319,13 +344,13 @@ Do I need really need a text book?
 </div>
 </section>
 </section>
-<section id="assessment-and-grading-3" class="level2">
-<h2 class="anchored" data-anchor-id="assessment-and-grading-3">Assessment and Grading</h2>
+<section id="cmsc-408---assessment-and-grading-4" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading-4">CMSC 408 - Assessment and Grading</h2>
 <p>This will be a busy semester! There will be items due each week.</p>
 <section id="semester-long-project" class="level3">
 <h3 class="anchored" data-anchor-id="semester-long-project">Semester-long project</h3>
 <div style="font-size:0.9em;">
-<p>Students will work in teams of 2 on a semester-long project. The project will require the students design and build a database backend presenting an API. The domain of the project is chosen by the students. Tools include SQL, python, flask, MySQL, Quarto, and others.</p>
+<p>Students will work in teams of 2 on a semester-long project. The project will require the students design, build and deploy a database driven web application.</p>
 </div>
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
@@ -338,18 +363,18 @@ Do I need really need a text book?
 
     section Project&lt;br/&gt;Deliverables&lt;br/&gt;(12 at 30%)
     (first day of class): milestone, fdc1, 1/7/2024, 0d
-    Student introductions: milestone, p1, 1/11/2024,0d
-    Team formation: milestone, p2, 1/13/2024, 0d
-    Team update: milestone, p3, 1/18/2024, 0d
-    Team update: milestone, p4, 1/25/2024, 0d
-    Proposal video: milestone, p5, 2/3/2024, 0d
-    Team update: milestone, p6, 2/8/2024, 0d
-    Team update: milestone, p7, 2/22/2024, 0d
-    Design report: milestone, p8, 3/2/2024, 0d
-    Team update: milestone, p9, 3/8/2024, 0d
-    Web docker: milestone, p10, 3/23/2024, 0d
-    Team update: milestone, p11, 4/4/2024, 0d
-    Final submission: milestone, p12, 4/28/2024, 0d
+    D01 - Student introductions **: milestone, p1, 1/11/2024,0d
+    D02 - Team formation **: milestone, p2, 1/13/2024, 0d
+    D03 - Team update: milestone, p3, 1/18/2024, 0d
+    D04 - Team update: milestone, p4, 1/25/2024, 0d
+    D05 - Proposal video **: milestone, p5, 2/3/2024, 0d
+    D06 - Team update: milestone, p6, 2/8/2024, 0d
+    D07 - Team update: milestone, p7, 2/22/2024, 0d
+    D08 - Design report **: milestone, p8, 3/2/2024, 0d
+    D09 - Team update: milestone, p9, 3/8/2024, 0d
+    D10 - Web docker **: milestone, p10, 3/23/2024, 0d
+    D11 - Team update: milestone, p11, 4/4/2024, 0d
+    D12 - Final submission **: milestone, p12, 4/28/2024, 0d
     (last day of class): milestone, ldc2, 4/28/2024, 0d
     
 </pre>
@@ -360,8 +385,8 @@ Do I need really need a text book?
 </div>
 </section>
 </section>
-<section id="assessment-and-grading-4" class="level2">
-<h2 class="anchored" data-anchor-id="assessment-and-grading-4">Assessment and Grading</h2>
+<section id="cmsc-408---assessment-and-grading-5" class="level2">
+<h2 class="anchored" data-anchor-id="cmsc-408---assessment-and-grading-5">CMSC 408 - Assessment and Grading</h2>
 <p>This will be a busy semester! There will be items due each week.</p>
 <section id="summary-and-grading-schedule" class="level3">
 <h3 class="anchored" data-anchor-id="summary-and-grading-schedule">Summary and grading schedule</h3>
@@ -386,7 +411,7 @@ Do I need really need a text book?
 <tr class="odd">
 <td style="text-align: center;">Homework</td>
 <td style="text-align: center;">40%</td>
-<td style="text-align: left;">10 submissions done individually</td>
+<td style="text-align: left;">9 submissions done individually</td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">Quizzes</td>
@@ -448,15 +473,18 @@ Do I need really need a text book?
 
 
 
-<section id="advice-from-your-peers-fall-2023" class="level2">
-<h2 data-anchor-id="advice-from-your-peers-fall-2023">Advice from your peers (Fall 2023)</h2>
-<div style="font-size: 150%;">
+<section id="advice-from-your-peers" class="level2">
+<h2 data-anchor-id="advice-from-your-peers">Advice from your peers</h2>
 <p>&nbsp;</p>
+<section id="from-course-evaluation-responses-fall-2023" class="level3">
+<h3 data-anchor-id="from-course-evaluation-responses-fall-2023">From course evaluation responses, Fall 2023:</h3>
+<div style="font-size: 125%; margin-left:10%; margin-right:10%; margin-top: 5%">
 <p><em>Discuss the level of difficulty of this course, the pace of the course, and the level of effort required to complete the work in this course.</em></p>
 </div>
 </section>
-<section id="advice-from-your-peers-fall-2023-1" class="level2">
-<h2 data-anchor-id="advice-from-your-peers-fall-2023-1">Advice from your peers (Fall 2023)</h2>
+</section>
+<section id="advice-from-your-peers-1" class="level2">
+<h2 data-anchor-id="advice-from-your-peers-1">Advice from your peers</h2>
 <div class="columns">
 <div class="column">
 <p><em>This course is easy if you keep up with the work. Having assignments due every week along with the semester-long project is a lot to take on.</em></p>
@@ -471,8 +499,8 @@ Do I need really need a text book?
 </div>
 </div>
 </section>
-<section id="advice-from-your-peers-fall-2023-2" class="level2">
-<h2 data-anchor-id="advice-from-your-peers-fall-2023-2">Advice from your peers (Fall 2023)</h2>
+<section id="advice-from-your-peers-2" class="level2">
+<h2 data-anchor-id="advice-from-your-peers-2">Advice from your peers</h2>
 <div class="columns">
 <div class="column">
 <p><em>I found the course difficulty to be well balanced. If a student goes to class, asks questions, and makes an effort to do their assignment they should have no problem at all passing. The pace of the course was perfect and allowed enough time for each unit to be processed before moving on to the next one. </em></p>
@@ -488,7 +516,12 @@ Do I need really need a text book?
 <p><em>This course was fairly difficult, but the professor made it very doable. The course pace was good, except by the end of the semester the pace gets really fast. 10/10 professor</em></p>
 </div>
 </div>
+<center>
+<section id="in-summary-dont-panic-you-got-this" class="level3">
+<h3 data-anchor-id="in-summary-dont-panic-you-got-this"><em>In summary: Don’t panic, you got this!</em></h3>
+</section></center>
 </section>
+
 
 
 <!-- /main column -->
