--- a/sp2025/details/html/welcome-details.html
+++ b/sp2025/details/html/welcome-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-07">
+<meta name="dcterms.date" content="2025-01-08">
 
 <title>Welcome - Details</title>
 <style>
@@ -35,7 +35,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Welcome - Details</h1>
 
-<p class="date">2025-01-07</p>
+<p class="date">2025-01-08</p>
 </header>
 
 
@@ -75,7 +75,7 @@ The class hasn’t yet started, but here are some things you can be doing to kee
 <h3 id="about-this-page">About this page</h3>
 <p>This page represents the <em>frontpage</em> for every week. The <em>frontpage</em> lists the deliverables due this week, provides links to the lecture slides and video (after it’s recorded), and any helpful resources and references.</p>
 <p>The <em>frontpage</em> presents a set of quick links to any week in the semester, and also highlights the current week. You can always press <em>Home</em> on the top left of the Canvas window to return to the current week’s <em>frontpage</em>.</p>
-<p>Below is a gannt chart that highlights the major topics over time for the course and where we are today.</p>
+<p>Below is a gannt chart that highlights the major topics over time for the course and where we are today. The vertical gold bar represents today and moves live with the sun.</p>
 
 
 
