--- a/sp2025/details/html/week-1-details.html
+++ b/sp2025/details/html/week-1-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-06">
+<meta name="dcterms.date" content="2025-01-10">
 
 <title>Week 1 - Details</title>
 <style>
@@ -35,12 +35,47 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 1 - Details</h1>
 
-<p class="date">2025-01-06</p>
+<p class="date">2025-01-10</p>
 </header>
 
 
-<p>Week 1 - Details</p>
-<p>This is a template file. Have at it!</p>
+<p class="lead">
+The class hasn’t yet started, but here are some things you can be doing to keep ahead of the curve.
+</p>
+<h3 id="things-to-do-this-week">Things to do this week!</h3>
+<ol type="1">
+<li><p><em><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356" target="_blank">Introduce yourself</a></em> - The course will require completion of a team-based semester-long project. Your goal during the first week of the course is to find a partner. It starts with introductions.</p></li>
+<li><p><em><a href="https://virginiacommonwealth.instructure.com/courses/113813/quizzes/216510" target="blank">Take the pre-class survey</a></em> - I’d like to learn more about the students in my class. Besides the <em>introduce yourself</em> stuff from above, I’ve got a survey with a bunch of questions. The survey is <em>graded</em>. That means that you get credit for completing it.</p></li>
+<li><p><em><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-discord" target="_blank">Join the course discord</a></em> - Previous classes appreciated a place to get their questions answered by others in the same class.</p></li>
+<li><p><em><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/lecture-1-video-2" target="_blank">Watch lecture 1</a></em> - Of course you’ll need to wait until it’s released. I’ll be covering lots of info about how the class works, grading, and other course mechanics. We’ll also start on databases!</p></li>
+<li><p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments" target="_blank">Review the assignments</a>. It will be a busy semester and things will jump at you quickly! Here is a <a href="https://lowkeylabs.github.io/cmsc408-course-admin/sp2025/detailed-gantt.html" target="_blank">gantt chart of the deliverables</a> so that you can see how they all fit together.</p></li>
+</ol>
+<h3 id="check-out-the-course-resources">Check out the course resources</h3>
+<p>Don’t be afraid to explore. Below are a bunch of resources to help get you acclimated. You can look ahead, but please realize that until the actual week of the semester, I don’t always have all the material together!</p>
+<ul class="kl_large_link_grid">
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-instructor">About the Instructor</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/syllabus">Course Syllabus</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-project">Course Project</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-student-resources">Student Resources</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-canvas-resources)">Canvas Resources</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-save-you-hours)">SAVE YOU HOURS™</a>
+</li>
+</ul>
+<h3 id="about-this-page">About this page</h3>
+<p>This page represents the <em>frontpage</em> for every week. The <em>frontpage</em> lists the deliverables due this week, provides links to the lecture slides and video (after it’s recorded), and any helpful resources and references.</p>
+<p>The <em>frontpage</em> presents a set of quick links to any week in the semester, and also highlights the current week. You can always press <em>Home</em> on the top left of the Canvas window to return to the current week’s <em>frontpage</em>.</p>
+<p>Below is a gannt chart that highlights the major topics over time for the course and where we are today. The vertical gold bar represents today and moves live with the sun.</p>
 
 
 
