--- a/sp2025/pages/html/course-discord.html
+++ b/sp2025/pages/html/course-discord.html
@@ -43,7 +43,7 @@ ul.task-list li input[type="checkbox"] {
 </h2>
 </header>
 <div style="`{python} block_style`">
-<p><strong>We’ve got a discord!!!</strong> - The course has a Discord server to serve as an <em>UNOFFICIAL</em> hub for collaboration and quick communication about the course. It’s a space where students can ask questions, share resources, and connect with classmates in real time, making it easier to stay engaged and get help when needed.</p>
+<p><strong>CMSC 408 has a discord!!!</strong> - The course has a Discord server to serve as an <em>UNOFFICIAL</em> hub for collaboration and quick communication about the course. It’s a space where students can ask questions, share resources, and connect with classmates in real time, making it easier to stay engaged and get help when needed.</p>
 <p>Official course communications and announcements will always be sent through Canvas.</p>
 <p>To contact me directly: please use <a href="mailto:jdleonard@vcu.edu" target="_blank">my email</a>. I don’t always keep up with Discord, especially with DMs!</p>
 <p><strong>We use real names</strong> - when you join the <em>Discord</em> you’ll need to change your <em>server profile</em> (that is, your name on the CMSC 408 discord server only) to your real name. Once I see your real name on the server, I’ll upgrade your role so that you have full access to all the channels.</p>
@@ -51,10 +51,13 @@ ul.task-list li input[type="checkbox"] {
 <div style="`{python} block_style`">
 <ul class="kl_large_link_grid mx-auto d-block">
 <li style="background:lightgray;">
-<a href="https://discord.gg/gCbs3UQQ9a">Click here to join</a>
+<a href="https://discord.gg/gCbs3UQQ9a">Click here to join the CMSC408 discord</a>
 </li>
 </ul>
 </div>
+<p>
+&nbsp;
+</p>
 <section id="what-is-discord" style="`{python} block_style`">
 <h3>What is <em>Discord</em>?</h3>
 <p><strong>Discord</strong> is a versatile communication platform designed for real-time collaboration and community building. It combines text, voice, and video chat in an intuitive interface, making it ideal for students in this database course.</p>
