--- a/sp2025/details/html/week-6-details.html
+++ b/sp2025/details/html/week-6-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-06">
+<meta name="dcterms.date" content="2025-01-11">
 
 <title>Week 6 - Details</title>
 <style>
@@ -35,12 +35,14 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 6 - Details</h1>
 
-<p class="date">2025-01-06</p>
+<p class="date">2025-01-11</p>
 </header>
 
 
-<p>Week 6 - Details</p>
-<p>This is a template file. Have at it!</p>
+<p class="lead">
+Welcome to a new week!
+</p>
+<p><em>Details will be updated closer to the week.</em></p>
 
 
 
