--- a/sp2025/details/html/week-2-details.html
+++ b/sp2025/details/html/week-2-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-13">
+<meta name="dcterms.date" content="2025-01-20">
 
 <title>Week 2 - Details</title>
 <style>
@@ -35,14 +35,47 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 2 - Details</h1>
 
-<p class="date">2025-01-13</p>
+<p class="date">2025-01-20</p>
 </header>
 
 
 <p class="lead">
-Welcome to a new week!
+How do you craft a database? How do you represent the real world in a database?
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<p>The lectures this week will focus on designing databases and on the basics of entity-relationship modeling. We’ll be doing lots of examples to get practice.</p>
+<h3 id="things-to-do-this-week">Things to do this week</h3>
+<ol type="1">
+<li><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356">Deliverable 1 - Intros</a></b> - If you haven’t already, complete project deliverable 1. In this assignment you’re introducint yourself Harmonize and meeting others in the class. One goal is to find a partner for the semester-long project.</li>
+<li><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1131331">Deliverable 2 - Team formation</a></b> - Once you find a partner, complete this on-line survey to tell me about your team.</li>
+<li><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170">Practice Quiz 1</a></b> - Start Practice Quiz 1. You can take this quiz as many times as you like. The <em>real</em> quiz is scheduled for next week, Week 3. If you’re comfy, you can take it as soon as it opens, no need to wait.</li>
+<li><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072333">Homework 1 - Data Engineering Tool Review</a></b> - this is homework assignment is due Sunday.<br>
+Don’t wait to the last minute. There is lots to do and tools to install.</li>
+<li><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075913">Discussion 1 - ER Modeling</a></b> - <em>Practice, practice, practice</em>. This Harmonize discussion allows you to model a database using words, and get feedback from others in class. The discussions asks that you turn the tables, offering feedback to others on their database model.</li>
+</ol>
+<p>
+&nbsp;
+</p>
+<h3 id="course-resources">Course resources</h3>
+<ul class="kl_large_link_grid">
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-instructor">Course Instructor</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/syllabus">Course Syllabus</a>
+</li>
+<li>
+<a href="resource-textbooks">Course Textbooks</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-student-resources">Student Resources</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-canvas-resources">Canvas Resources</a>
+</li>
+<li>
+<a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-save-you-hours">SAVE YOU HOURS™</a>
+</li>
+</ul>
 
 
 
