--- a/sp2025/details/html/week-3-details.html
+++ b/sp2025/details/html/week-3-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-18">
+<meta name="dcterms.date" content="2025-01-27">
 
 <title>Week 3 - Details</title>
 <style>
@@ -35,17 +35,30 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 3 - Details</h1>
 
-<p class="date">2025-01-18</p>
+<p class="date">2025-01-27</p>
 </header>
 
 
 <p class="lead">
-Welcome to a new week!
+We’re focused on CRAFTING entity-relation models!
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/week-2-front-page-3">Last week</a> we introduced a TON of material on entity-relation modeling. We’ve got a <a href="https://lowkeylabs.github.io/cmsc408-course-admin/guide/er-models/">study guide</a> that summarizes the material, too.</p>
+<p>This week we’re building practice creating entition-relation diagrams. There are two focii - getting practice with the tools (graphviz and mermaid), and getting practice translating real world objects into entity-relation models.</p>
+<h2 id="things-you-should-be-doing-this-week">Things you should be doing this week</h2>
+<p>At this point, you should have a team for the <a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-course-project">Semester-long project</a>.</p>
+<p>What kind of database are you going to build? In <a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072358">Deliverable 3</a> you’ll be working with your teammates on Harmonize to kick around ideas. A key learning objective for this assignment is learning to work as part of a team to define and accomplish common goals.</p>
+<p>Once you have your project <em>generally scoped</em>, you need to pitch your idea to me in <a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075768">Deliverable 4</a>. You make a video (using zoom or whatever) and submit it to me for review. <b>I MUST APPROVE</b> all topics prior to you moving forward. This approval comes in the form of a passing grade for deliverable 4.</p>
+<p>While all this project stuff is happening, there is the perfunctory <a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072335">Homework 2</a> on ER Models. It is here (in this assignment) that you’ll get lots of practice on ER Modeling.</p>
+<h2 id="things-that-you-should-have-already-completed">Things that you should have already completed</h2>
+<p>Don’t get too far behind!</p>
+<ol type="1">
+<li><p><b>Got your partner for the semester project?</b> - <a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356">Deliverable 1</a> was designed to help you meet potential partners, <a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1131331">Deliverable 2</a> is how you communicate your team formation to me.</p></li>
+<li><p>Keep practicing with <b><a href="https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170">Practice Quiz 1</a></b> and when you’re ready, take the <b><a href="https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211165">Quiz 1</a> due this week.</b></p></li><b>
+<li><p>Keep working on the other deliverables! They are accepted LATE but don’t get too far behind!</p></li>
+</b></ol><b>
 
 
 
 
 
-</body></html>
+</b></body></html>
