--- a/sp2025/details/html/week-4-details.html
+++ b/sp2025/details/html/week-4-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-21">
+<meta name="dcterms.date" content="2025-02-03">
 
 <title>Week 4 - Details</title>
 <style>
@@ -35,14 +35,18 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 4 - Details</h1>
 
-<p class="date">2025-01-21</p>
+<p class="date">2025-02-03</p>
 </header>
 
 
 <p class="lead">
-Welcome to a new week!
+New topic - relational models and algebra
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<h3 id="things-to-do-this-week">Things to do this week</h3>
+<p><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211171">Practice Quiz 2 </a></b> - Get started on practice quiz 2. This quiz focuses on relational algebra.</p>
+<p><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075768">Deliverable 4 - Video Pitch</a></b> - You are working with your team mate(s) to refine your semester project idea, then put together a video that <em>pitches</em> your idea. A passing grade is your OK to proceed with deliverable 5. Up in the resources I provide an example of what this video pitch might look like.</p>
+<p><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072335">Homework 2 - ER modeling</a></b> - Practice makes perfect! You are getting practice creating ER diagrams from descriptions of a databases.</p>
+<p><b><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075914">Harmonize discussion 2 - Relational algebra</a></b> - A little tougher. I want to pick a relational algebra topic and then explain it in a post. You will also be offering tips or suggestions to explanations posted by other students.</p>
 
 
 
