--- a/sp2025/details/html/week-11-details.html
+++ b/sp2025/details/html/week-11-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-21">
+<meta name="dcterms.date" content="2025-02-25">
 
 <title>Week 11 - Details</title>
 <style>
@@ -35,14 +35,28 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 11 - Details</h1>
 
-<p class="date">2025-01-21</p>
+<p class="date">2025-02-25</p>
 </header>
 
 
+<!-- overview-block-begin -->
 <p class="lead">
-Welcome to a new week!
+Quiz 5 - SQL basics. Review docker and deliverable 9. Introduce homework 6 and building a database from scratch.
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075772">Deliverable 6 - Docker Scaffold</a> Docker Scaffold</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072331">Quiz 4 - SQL Basics - Requires Respondus LockDown Browser + Webcam</a> - add description to course workbook.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-11-full-stack-apache-slash-php-2">Full stack apache/php</a> Nice overview of deliverable 9!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-11-crud-and-php-video-2">CRUD and PHP (video)</a> A good place start with PHP and CRUD for the semester-long project!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-11-php-connections-video-2">PHP connections (video)</a> This video can help explain the index.php file in our docker examples!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-11-crud-slash-php-example-video-2">CRUD/PHP example (video)</a> Another example using PHP to create a CRUD website.</p>
+<!-- resources-block-end -->
 
 
 
