--- a/sp2025/details/html/week-14-details.html
+++ b/sp2025/details/html/week-14-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-21">
+<meta name="dcterms.date" content="2025-02-25">
 
 <title>Week 14 - Details</title>
 <style>
@@ -35,14 +35,22 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 14 - Details</h1>
 
-<p class="date">2025-01-21</p>
+<p class="date">2025-02-25</p>
 </header>
 
 
+<!-- overview-block-begin -->
 <p class="lead">
-Welcome to a new week!
+SQL SELECTS - full tilt boogie! Subqueries and WITH. Views and Indexes.
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072347">Homework 8 - SQL Funhouse</a> - add description to course workbook.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<h3 id="and-dont-forget-the-resources">And don’t forget the resources</h3>
+<p>The resources above were carefully curated to accelerate your learning and help you successfully complete the deliverables. <em>Check them out!</em> <!-- resources-block-end --></p>
 
 
 
