--- a/sp2025/details/html/week-8-details.html
+++ b/sp2025/details/html/week-8-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-02-24">
+<meta name="dcterms.date" content="2025-02-25">
 
 <title>Week 8 - Details</title>
 <style>
@@ -35,14 +35,26 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 8 - Details</h1>
 
-<p class="date">2025-02-24</p>
+<p class="date">2025-02-25</p>
 </header>
 
 
+<!-- overview-block-begin -->
 <p class="lead">
-Welcome to a new week!
+This week we start SQL. We’ll start slow, getting tools and software assembled and installed on your computers. For some, this will be easy. Others may struggle … be patient and use the TAs!
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h4 id="things-to-do-this-week">Things to do this week</h4>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072339">Homework 4 - Analysis and Normal Forms</a> - add description to course workbook.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072330">Quiz 3 - Analysis and Normal Forms - Requires Respondus LockDown Browser + Webcam</a> - add description to course workbook.</p>
+<!-- deliverables-block-end -->
+<!-- resources-block-begin -->
+<h4 id="notes-on-the-resources">Notes on the Resources</h4>
+<p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-normal-forms-3">Normal Forms</a> Another video from Decomplexify - what are the various normal forms?</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-bcnf-3">BCNF</a> Another video from Decomplexify - Good description of BCNF!</p>
+<!-- resources-block-end -->
 
 
 
