--- a/sp2025/details/html/week-17-details.html
+++ b/sp2025/details/html/week-17-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-01-21">
+<meta name="dcterms.date" content="2025-02-25">
 
 <title>Week 17 - Details</title>
 <style>
@@ -35,14 +35,21 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 17 - Details</h1>
 
-<p class="date">2025-01-21</p>
+<p class="date">2025-02-25</p>
 </header>
 
 
+<!-- overview-block-begin -->
 <p class="lead">
-Welcome to a new week!
+This is the last week of school - and we’re only meeting on Monday. Keep focused on finishing out your semester-long project!
 </p>
-<p><em>Details will be updated closer to the week.</em></p>
+<!-- overview-block-end -->
+<!-- deliverables-block-begin -->
+<h3 id="things-to-do-this-week">Things to do this week</h3>
+<p>Complete the deliverable list above! <!-- deliverables-block-end --></p>
+<!-- resources-block-begin -->
+<h3 id="and-dont-forget-the-resources">And don’t forget the resources</h3>
+<p>The resources above were carefully curated to accelerate your learning and help you successfully complete the deliverables. <em>Check them out!</em> <!-- resources-block-end --></p>
 
 
 
