--- a/sp2025/details/html/week-7-details.html
+++ b/sp2025/details/html/week-7-details.html
@@ -41,13 +41,13 @@ ul.task-list li input[type="checkbox"] {
 
 <!-- overview-block-begin -->
 <p class="lead">
-More on normal forms. We’ll discuss homework 4, practice quiz 4 and project deliverable 8!
+Homework 4 and practice quiz 3 go hand-in-hand. Don’t forget Project Deliverable 5 - design!
 </p>
 <!-- overview-block-end -->
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075770">Deliverable 5 - Design Documentation</a> Design Documentation</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081390">Practice Quiz 3 - Analysis and Normal Forms</a> - add description to course workbook.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075770">Deliverable 5 - Design Documentation</a> is one of the key deliverables for the semester project. It’s a large activity - invest the time!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081390">Practice Quiz 3 - Analysis and Normal Forms</a> is the practice quiz for Normal Forms. Work this practice quiz in conjunction with homework 4.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
 <h4 id="notes-on-the-resources">Notes on the Resources</h4>
