--- a/sp2025/details/html/week-8-details.html
+++ b/sp2025/details/html/week-8-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-02-25">
+<meta name="dcterms.date" content="2025-02-27">
 
 <title>Week 8 - Details</title>
 <style>
@@ -35,7 +35,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 8 - Details</h1>
 
-<p class="date">2025-02-25</p>
+<p class="date">2025-02-27</p>
 </header>
 
 
@@ -46,14 +46,20 @@ This week we start SQL. We’ll start slow, getting tools and software assembled
 <!-- overview-block-end -->
 <!-- deliverables-block-begin -->
 <h4 id="things-to-do-this-week">Things to do this week</h4>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072339">Homework 4 - Analysis and Normal Forms</a> - add description to course workbook.</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072330">Quiz 3 - Analysis and Normal Forms - Requires Respondus LockDown Browser + Webcam</a> - add description to course workbook.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072339">Homework 4 - Analysis and Normal Forms</a> focuses on normal forms and analysis. Successful completion of homework 4 will REALLY help you with Quiz 3!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072330">Quiz 3 - Analysis and Normal Forms - Requires Respondus LockDown Browser + Webcam</a> focuses on normal forms and definitions. Good luck!</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
 <h4 id="notes-on-the-resources">Notes on the Resources</h4>
 <p>Review ALL the resources above. Here are some additional notes:</p>
+<p><a href="https://www.geeksforgeeks.org/normal-forms-in-dbms/">Normal Forms (text)</a> A normal-form walkthrough with definitions.</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-normal-forms-3">Normal Forms</a> Another video from Decomplexify - what are the various normal forms?</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-bcnf-3">BCNF</a> Another video from Decomplexify - Good description of BCNF!</p>
+<p><a href="https://vertabelo.com/blog/closure-of-a-set-of-attributes/">Closures w/ examples</a> Closures are confusing. This page might help!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-intro-to-data-ethics">Intro to data ethics</a> an important section in your deliverable 5. Let’s learn together!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-data-ethics">Data ethics</a> explores your role as a data scientist and data ethics.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-privacy-and-ethics">Privacy and ethics</a> although this is 10 years old, she is SO SPOT ON!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-8-bbc-data-ethics">BBC data ethics</a> a nice video from the BBC on data privacy and ethics.</p>
 <!-- resources-block-end -->
 
 
