--- a/sp2025/details/html/week-7-details.html
+++ b/sp2025/details/html/week-7-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-02-25">
+<meta name="dcterms.date" content="2025-02-27">
 
 <title>Week 7 - Details</title>
 <style>
@@ -35,7 +35,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 7 - Details</h1>
 
-<p class="date">2025-02-25</p>
+<p class="date">2025-02-27</p>
 </header>
 
 
@@ -54,6 +54,10 @@ Homework 4 and practice quiz 3 go hand-in-hand. Don’t forget Project Deliverab
 <p>Review ALL the resources above. Here are some additional notes:</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-normal-forms-3">Normal Forms</a> Another video from Decomplexify - what are the various normal forms?</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-bcnf-3">BCNF</a> Another video from Decomplexify - Good description of BCNF!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-intro-to-data-ethics">Intro to data ethics</a> an important section in your deliverable 5. Let’s learn together!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-data-ethics">Data ethics</a> explores your role as a data scientist and data ethics.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-privacy-and-ethics">Privacy and ethics</a> although this is 10 years old, she is SO SPOT ON!</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/pages/resource-week-7-bbc-data-ethics">BBC data ethics</a> a nice video from the BBC on data privacy and ethics.</p>
 <!-- resources-block-end -->
 
 
