--- a/sp2025/details/html/week-10-details.html
+++ b/sp2025/details/html/week-10-details.html
@@ -48,7 +48,7 @@ Review of homework 5, introduce and explore SELECT statements.
 <h4 id="things-to-do-this-week">Things to do this week</h4>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075916">Discussion 4 - SQL Basics</a> SQL Basics</p>
 <p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072341">Homework 5 - Getting started with SQL</a> is all about getting the software installed and tested. It’s a big job!</p>
-<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081391">Practice Quiz 4 - SQL Basics</a> - add description to course workbook.</p>
+<p><a href="https://virginiacommonwealth.instructure.com/courses/113813/assignments/1081391">Practice Quiz 4 - SQL Basics</a> is the practice quiz for SQL.</p>
 <!-- deliverables-block-end -->
 <!-- resources-block-begin -->
 <h4 id="notes-on-the-resources">Notes on the Resources</h4>
