--- a/sp2025/details/html/week-15-details.html
+++ b/sp2025/details/html/week-15-details.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-04-21">
+<meta name="dcterms.date" content="2025-04-22">
 
 <title>Week 15 - Details</title>
 <style>
@@ -35,13 +35,13 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header">
 <h1 class="title">Week 15 - Details</h1>
 
-<p class="date">2025-04-21</p>
+<p class="date">2025-04-22</p>
 </header>
 
 
 <!-- overview-block-begin -->
 <p class="lead">
-Fall break - we’re almost done. Take a deep breath and relax!
+More on SELECTS and other finishing-up topics
 </p>
 <!-- overview-block-end -->
 <h4 id="lecture-update">Lecture update</h4>
